@@ -170,13 +170,6 @@ sub finalize {
 If your application is returning a status code that is not handled by
 [HTTP::Status](https://metacpan.org/pod/HTTP::Status), then the metrics may not be logged for that reponse.
 
-## Support for older Perl versions
-
-This module requires Perl v5.10 or newer.
-
-Pull requests to support older versions of Perl are welcome. See
-["SOURCE"](#source).
-
 # SEE ALSO
 
 [Net::Statsd::Client](https://metacpan.org/pod/Net::Statsd::Client)
